feat: setup application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+# default profile
 server.port=8081
 spring.application.name=belajar-springboot
+app.email-smtp="ethereal"
+app.email-user="kali.jones78@ethereal.email"
+app.email-password="default"
 
