feat: integrate postgresql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,17 @@ app.email-smtp="ethereal"
 app.email-user="kali.jones78@ethereal.email"
 app.email-password="default"
 
+
+# PostgreSQL datasource configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/backend_class
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database=POSTGRESQL
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.datasource.hikari.connection-timeout=600000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.maximum-pool-size=10
